load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@melo//:apps/common/bazel/jest_test/index.bzl", "jest_test")
load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_config(
    name = "song_ts_config",
    src = "//apps/song:tsconfig.app.json",
    deps = [
        "//:tsconfig.json",
    ],
)

ts_library(
    name = "song_ts_library",
    srcs = glob(
        ["*.ts"],
        exclude = ["*spec.ts"],
    ),
    module_name = "@melo/song",
    runtime = "nodejs",
    tsconfig = ":song_ts_config",
    deps = [
        "//libs/apm/src:apm_ts_library",
        "//libs/common/src:common_ts_library",
        "//libs/prom/src:prom_ts_library",
        "//libs/sentry/src:sentry_ts_library",
        "@npm//@elastic/elasticsearch",
        "@npm//@nestjs/common",
        "@npm//@nestjs/config",
        "@npm//@nestjs/core",
        "@npm//@nestjs/elasticsearch",
        "@npm//@nestjs/microservices",
        "@npm//@nestjs/platform-express",
        "@npm//@nestjs/platform-socket.io",
        "@npm//@nestjs/typeorm",
        "@npm//@nestjs/websockets",
        "@npm//@types/lodash",
        "@npm//@types/ms",
        "@npm//@types/node",
        "@npm//@types/socket.io",
        "@npm//@types/source-map-support",
        "@npm//lodash",
        "@npm//ms",
        "@npm//redis",
        "@npm//reflect-metadata",
        "@npm//source-map-support",
        "@npm//tslib",
        "@npm//rxjs",
        "@npm//typeorm",
    ],
)

ts_library(
    name = "song_test_ts_library",
    srcs = glob(["*spec.ts"]),
    module_name = "@melo/song",
    runtime = "nodejs",
    tsconfig = ":song_ts_config",
    deps = [
        ":song_ts_library",
        "//libs/common/src:common_ts_library",
        "@npm//@nestjs/common",
        "@npm//@nestjs/config",
        "@npm//@nestjs/elasticsearch",
        "@npm//@nestjs/testing",
        "@npm//@nestjs/typeorm",
        "@npm//@types/jest",
        "@npm//ts-jest",
        "@npm//axios",
        "@npm//rxjs",
    ],
)

nodejs_binary(
    name = "song_nodejs_binary",
    data = [
        ":song_ts_library",
    ],
    entry_point = ":main",
    templated_args = [
        "--nobazel_patch_module_resolver",
        "--node_options=--require=source-map-support/register",
    ],
)

jest_test(
    name = "song_jest_test",
    srcs = glob(["*spec.ts"]),
    jest_config = "//:jest.config.json",
    deps = [
        ":song_test_ts_library",
    ],
)

nodejs_image(
    name = "song_nodejs_image",
    binary = ":song_nodejs_binary",
)

container_push(
    name = "song_container_push",
    format = "Docker",
    image = ":song_nodejs_image",
    registry = "localhost:5000",
    repository = "melo_song",
    tag = "{EXPECTED_REF}",
)
