load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@melo//:apps/common/bazel/jest_test/index.bzl", "jest_test")
load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_config(
    name = "apm_ts_config",
    src = "//libs/apm:tsconfig.lib.json",
    deps = [
        "//:tsconfig.json",
    ],
)

ts_library(
    name = "apm_ts_library",
    srcs = glob(
        ["*.ts"],
        exclude = ["*spec.ts"],
    ),
    module_name = "@melo/apm",
    tsconfig = ":apm_ts_config",
    deps = [
        "@npm//@nestjs/common",
        "@npm//@nestjs/core",
        "@npm//@nestjs/platform-express",
        "@npm//@types/aws-lambda",
        "@npm//@types/connect",
        "@npm//@types/express",
        "@npm//@types/node",
        "@npm//@types/source-map-support",
        "@npm//aws-lambda",
        "@npm//connect",
        "@npm//elastic-apm-node",
        "@npm//express",
        "@npm//kaop-ts",
        "@npm//reflect-metadata",
        "@npm//rxjs",
        "@npm//source-map-support",
    ],
)

ts_library(
    name = "prom_test_ts_library",
    srcs = glob(["*spec.ts"]),
    module_name = "@melo/apm",
    tsconfig = ":apm_ts_config",
    deps = [
        ":apm_ts_library",
        "@npm//@nestjs/testing",
    ],
)

nodejs_binary(
    name = "apm_nodejs_binary",
    data = [
        ":apm_ts_library",
    ],
    entry_point = ":main",
    templated_args = [
        "--nobazel_patch_module_resolver",
        "--node_options=--require=source-map-support/register",
    ],
)

jest_test(
    name = "apm_jest_test",
    srcs = glob(["*spec.ts"]),
    jest_config = "//:jest.config.json",
    deps = [
        ":prom_test_ts_library",
        "@npm//@types/jest",
    ],
)

nodejs_image(
    name = "apm_nodejs_image",
    binary = ":apm_nodejs_binary",
)
