load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@melo//:apps/common/bazel/jest_test/index.bzl", "jest_test")
load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_config(
    name = "common_ts_config",
    src = "//libs/common:tsconfig.lib.json",
    deps = [
        "//:tsconfig.json",
    ],
)

ts_library(
    name = "common_ts_library",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*spec.ts"],
    ),
    module_name = "@melo/common",
    tsconfig = ":common_ts_config",
    deps = [
        "@npm//@nestjs/common",
        "@npm//@nestjs/swagger",
        "@npm//@nestjs/terminus",
        "@npm//@nestjs/typeorm",
        "@npm//@types/node",
        "@npm//@types/source-map-support",
        "@npm//@types/uuid",
        "@npm//class-transformer",
        "@npm//class-validator",
        "@npm//crypto-random-string",
        "@npm//source-map-support",
        "@npm//typeorm",
        "@npm//uuid",
    ],
)

ts_library(
    name = "prom_test_ts_library",
    srcs = glob(["**/*spec.ts"]),
    module_name = "@melo/common",
    tsconfig = ":common_ts_config",
    deps = [
        ":common_ts_library",
        "@npm//@nestjs/testing",
    ],
)

nodejs_binary(
    name = "common_nodejs_binary",
    data = [
        ":common_ts_library",
    ],
    entry_point = ":main",
    templated_args = [
        "--nobazel_patch_module_resolver",
        "--node_options=--require=source-map-support/register",
    ],
)

jest_test(
    name = "common_jest_test",
    srcs = glob(["**/*spec.ts"]),
    jest_config = "//:jest.config.json",
    deps = [
        ":prom_test_ts_library",
        "@npm//@types/jest",
    ],
)

nodejs_image(
    name = "common_nodejs_image",
    binary = ":common_nodejs_binary",
)
