load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@melo//:apps/common/bazel/jest/index.bzl", "jest_test")
load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_library")

package(default_visibility = ["//visibility:private"])

ts_config(
    name = "common_ts_config",
    src = "//libs/common:tsconfig.lib.json",
    deps = [
        "//:tsconfig.json",
    ],
)

ts_library(
    name = "common_ts_library",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = ["**/*spec.ts"],
    ),
    module_name = "@melo/common",
    runtime = "nodejs",
    tsconfig = ":common_ts_config",
    deps = [
        "@npm//@nestjs/common",
        "@npm//@nestjs/swagger",
        "@npm//@nestjs/terminus",
        "@npm//@nestjs/typeorm",
        "@npm//@types/node",
        "@npm//@types/uuid",
        "@npm//class-transformer",
        "@npm//class-validator",
        "@npm//crypto-random-string",
        "@npm//typeorm",
        "@npm//uuid",
    ],
    visibility = ["//visibility:public"],
)

ts_library(
    name = "common_test_ts_library",
    srcs = glob(["**/*spec.ts"]),
    runtime = "nodejs",
    deps = [
        ":common_ts_library",
        "@npm//@nestjs/testing",
        "@npm//@types/jest",
    ],
)

jest_test(
    name = "common_jest_test",
    srcs = glob(["**/*spec.ts"]),
    jest_config = "//:jest.config.json",
    deps = [
        ":common_test_ts_library",
    ],
)
