load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@melo//:apps/common/bazel/jest_test/index.bzl", "jest_test")
load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_config(
    name = "prom_ts_config",
    src = "//libs/prom:tsconfig.lib.json",
    deps = [
        "//:tsconfig.json",
    ],
)

ts_library(
    name = "prom_ts_library",
    srcs = glob(
        ["*.ts"],
        exclude = ["*spec.ts"],
    ),
    module_name = "@melo/prom",
    runtime = "nodejs",
    tsconfig = ":prom_ts_config",
    deps = [
        "@npm//@nestjs/common",
        "@npm//@nestjs/core",
        "@npm//@nestjs/platform-fastify",
        "@npm//@types/node",
        "@npm//@types/source-map-support",
        "@npm//fastify",
        "@npm//kaop-ts",
        "@npm//prom-client",
        "@npm//reflect-metadata",
        "@npm//rxjs",
        "@npm//source-map-support",
        "@npm//tslib",
    ],
)

nodejs_binary(
    name = "prom_nodejs_binary",
    data = [
        ":prom_ts_library",
    ],
    entry_point = ":index",
    templated_args = [
        "--nobazel_patch_module_resolver",
        "--node_options=--require=source-map-support/register",
    ],
)

jest_test(
    name = "prom_jest_test",
    srcs = glob(["*spec.ts"]),
    jest_config = "//:jest.config.json",
    deps = [
        "//:tsconfig.json",
        ":prom_ts_library",
        "@npm//@nestjs/testing",
        "@npm//@types/jest",
        "@npm//ts-jest",
    ],
)
