load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@melo//:apps/common/bazel/jest/index.bzl", "jest_test")
load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_library")

package(default_visibility = ["//visibility:private"])

ts_config(
    name = "prom_ts_config",
    src = "//libs/prom:tsconfig.lib.json",
    deps = [
        "//:tsconfig.json",
    ],
)

ts_library(
    name = "prom_ts_library",
    srcs = glob(
        include = ["*.ts"],
        exclude = ["*spec.ts"],
    ),
    module_name = "@melo/prom",
    runtime = "nodejs",
    tsconfig = ":prom_ts_config",
    deps = [
        "@npm//@nestjs/common",
        "@npm//@nestjs/core",
        "@npm//@nestjs/platform-express",
        "@npm//@types/express",
        "@npm//@types/node",
        "@npm//express",
        "@npm//kaop-ts",
        "@npm//prom-client",
        "@npm//rxjs",
    ],
    visibility = ["//visibility:public"],
)

ts_library(
    name = "prom_test_ts_library",
    srcs = glob(["*spec.ts"]),
    runtime = "nodejs",
    deps = [
        ":prom_ts_library",
        "@npm//@nestjs/common",
        "@npm//@nestjs/core",
        "@npm//@nestjs/testing",
        "@npm//@types/jest",
        "@npm//prom-client",
        "@npm//rxjs",
    ],
)

jest_test(
    name = "prom_jest_test",
    srcs = glob(["*spec.ts"]),
    jest_config = "//:jest.config.json",
    deps = [
        ":prom_test_ts_library",
    ],
)
