load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@melo//:apps/common/bazel/jest_test/index.bzl", "jest_test")
load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_config(
    name = "sentry_ts_config",
    src = "//libs/sentry:tsconfig.lib.json",
    deps = [
        "//:tsconfig.json",
    ],
)

ts_library(
    name = "sentry_ts_library",
    srcs = glob(
        ["*.ts"],
        exclude = ["*spec.ts"],
    ),
    module_name = "@melo/sentry",
    runtime = "nodejs",
    tsconfig = ":sentry_ts_config",
    deps = [
        "@npm//@nestjs/common",
        "@npm//@nestjs/core",
        "@npm//@nestjs/platform-express",
        "@npm//@sentry/hub",
        "@npm//@sentry/node",
        "@npm//@sentry/types",
        "@npm//@types/node",
        "@npm//@types/source-map-support",
        "@npm//kaop-ts",
        "@npm//reflect-metadata",
        "@npm//rxjs",
        "@npm//source-map-support",
        "@npm//tslib",
    ],
)

nodejs_binary(
    name = "sentry_nodejs_binary",
    data = [
        ":sentry_ts_library",
    ],
    entry_point = ":index",
    templated_args = [
        "--nobazel_patch_module_resolver",
        "--node_options=--require=source-map-support/register",
    ],
)

jest_test(
    name = "sentry_jest_test",
    srcs = glob(["*spec.ts"]),
    jest_config = "//:jest.config.json",
    deps = [
        "//:tsconfig.json",
        ":sentry_ts_library",
        "@npm//@nestjs/testing",
        "@npm//@types/jest",
        "@npm//ts-jest",
    ],
)
